@@ -1,13 +1,12 @@
-topdir=@topdir@
-topsrcdir=@topsrcdir@
 CPP = @CPP@
 prefix= @prefix@
 exec_prefix = @exec_prefix@
 libdir= @libdir@
 
-AR = ar
+AR = @AR@
 RANLIB = @RANLIB@
 OPTS = @DEFS@
+
 RPMCONFIGDIR=@RPMCONFIGDIR@
 FINDPROVIDES=$(RPMCONFIGDIR)/find-provides
 FINDREQUIRES=$(RPMCONFIGDIR)/find-requires
@@ -19,8 +18,4 @@ LOCALEDIR=@datadir@/locale
 PACKAGE = @PACKAGE@
 VERSION = @VERSION@
 
-CFLAGS = -I$(topdir) -I$(topsrcdir) @CFLAGS@ @INCPATH@ $(OPTS) \
-	  -I$(topsrcdir)/lib -I$(topsrcdir)/misc
-LDFLAGS = @LDFLAGS@ -L$(topdir)/lib -L$(topdir)/build -L$(topdir)/misc \
-	  -L$(topdir)/popt
 CC = @CC@
