@@ -1,4 +1,5 @@
 srcdir = @srcdir@
+top_srcdir = @top_srcdir@
 VPATH = $(srcdir)
 
 include ../Makefile.inc
