@@ -2,9 +2,9 @@
 
 AUTOMAKE_OPTIONS = 1.3 foreign
 
-INCLUDES = -I../build -I../lib -I../intl -I../misc @INCPATH@
+INCLUDES = -I$(top_srcdir) -I$(top_srcdir)/build -I$(top_srcdir)/lib -I$(top_srcdir)/intl -I$(top_srcdir)/misc @INCPATH@
 
-LDFLAGS = -L../popt -L../build -L../lib -L../misc
+LDFLAGS = -L$(top_builddir)/popt -L$(top_builddir)/build -L$(top_builddir)/lib -L$(top_builddir)/misc
 LDADD = -lrpm
 
 EXTRA_DIST =	fstrcmp.c message.c str-list.c
